<resources>
    <string name="app_name">Classical Music Quiz</string>
    <string name="name_edit_text">Please, type Your name here...</string>
    <string name="invitation">Hi! Do you have good knowledge about classical music? Let see together!
        Please, answer on following questions and then press \"Finish\" to know your results.</string>
    <string name="question_1">1. What is the name of the 41st symphony of Mozart:</string>
    <string name="answer_1_1">Mars</string>
    <string name="answer_1_2">Jupiter</string>
    <string name="answer_1_3">Mercury</string>
    <string name="answer_1_4">Venus</string>
    <string name="question_2">2. Which of the following composers lived during the Baroque era:</string>
    <string name="answer_2_1">Honegger</string>
    <string name="answer_2_2">Baсh</string>
    <string name="answer_2_3">Handel</string>
    <string name="answer_2_4">Gounod</string>
    <string name="question_3">3. For whom of the composers the main motive for opera creativity was a fairytale:</string>
    <string name="answer_3_1">Rimsky-Korsakov</string>
    <string name="answer_3_2">Tchaikovsky</string>
    <string name="answer_3_3">Balakirev</string>
    <string name="answer_3_4">Gurilyov</string>
    <string name="question_4">4. Who is the founder of the Russian opera:</string>
    <string name="answer_4_1">Prokofiev</string>
    <string name="answer_4_2">Glinka</string>
    <string name="answer_4_3">Dargomyzhsky</string>
    <string name="answer_4_4">Borodin</string>
    <string name="question_5">5. Who was the first composer to add the choir to the symphony:</string>
    <string name="answer_5_1">Mozart</string>
    <string name="answer_5_2">Beethoven</string>
    <string name="answer_5_3">Mahler</string>
    <string name="answer_5_4">Berlioz</string>
    <string name="question_6">6. Which of the following composers is the record holder for writing symphonies:</string>
    <string name="answer_6_1">Haydn</string>
    <string name="answer_6_2">Mozart</string>
    <string name="answer_6_3">Schubert</string>
    <string name="answer_6_4">Tchaikovsky</string>
    <string name="question_7">7. Who from composers did not live up to 30 years:</string>
    <string name="answer_7_1">Schubert</string>
    <string name="answer_7_2">Pergolesi</string>
    <string name="answer_7_3">Mozart</string>
    <string name="answer_7_4">Chopin</string>
    <string name="question_8">8. Who is the founder of the nocturne:</string>
    <string name="answer_8_1">Chopin</string>
    <string name="answer_8_2">Field</string>
    <string name="answer_8_3">Rachmaninoff</string>
    <string name="answer_8_4">Liszt</string>
    <string name="question_9">9. About which opera Tchaikovsky said: "In ten years' time .... will be the most popular opera in the world":</string>
    <string name="answer_9_1">Carmen</string>
    <string name="answer_9_2">The Magical Flute</string>
    <string name="answer_9_3">Bohemia</string>
    <string name="answer_9_4">Eugene Onegin</string>
    <string name="question_10">10. Whose is this portrait:</string>
    <string name="answer_10_1">Dvorak</string>
    <string name="answer_10_2">Harry Potter</string>
    <string name="answer_10_3">Berlioz</string>
    <string name="answer_10_4">Shostakovich</string>
    <string name="quiz10_img">Who is that?</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_reset">Reset</string>
</resources>
